--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
   "resolutions": {
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
